[gd_scene load_steps=4 format=3 uid="uid://v8hilwrpuc2j"]

[ext_resource type="PackedScene" uid="uid://dgyyy34dqtob8" path="res://Scenes/checklist_item.tscn" id="1_clrvb"]
[ext_resource type="Script" path="res://Scripts/checklist.gd" id="1_h2nq1"]
[ext_resource type="Texture2D" uid="uid://c3g1k5xcsbrnw" path="res://Assets/ui/list_paper.png" id="2_ceavr"]

[node name="Checklist" type="Control"]
layout_mode = 3
anchor_right = 0.893
anchor_bottom = 1.0
offset_right = -0.140137
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h2nq1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1980.0
offset_bottom = 2570.0
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_ceavr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -258.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 220
theme_override_constants/margin_top = 221
theme_override_constants/margin_right = 20

[node name="ChecklistTextContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ChecklistItem" parent="MarginContainer/ChecklistTextContainer" instance=ExtResource("1_clrvb")]
layout_mode = 2
text = "Eggs"

[node name="ChecklistItem2" parent="MarginContainer/ChecklistTextContainer" instance=ExtResource("1_clrvb")]
layout_mode = 2
text = "Milk"

[node name="ChecklistItem3" parent="MarginContainer/ChecklistTextContainer" instance=ExtResource("1_clrvb")]
layout_mode = 2
text = "Cereal"

[node name="ChecklistItem4" parent="MarginContainer/ChecklistTextContainer" instance=ExtResource("1_clrvb")]
layout_mode = 2
text = "Chicken"

[node name="ChecklistItem5" parent="MarginContainer/ChecklistTextContainer" instance=ExtResource("1_clrvb")]
layout_mode = 2
text = "Bread"

[node name="ChecklistItem6" parent="MarginContainer/ChecklistTextContainer" instance=ExtResource("1_clrvb")]
layout_mode = 2
text = "Onion"

[node name="ChecklistItem9" parent="MarginContainer/ChecklistTextContainer" instance=ExtResource("1_clrvb")]
layout_mode = 2
text = "Fruit"

[node name="ChecklistItem7" parent="MarginContainer/ChecklistTextContainer" instance=ExtResource("1_clrvb")]
layout_mode = 2
text = "Pasta"

[node name="ChecklistItem8" parent="MarginContainer/ChecklistTextContainer" instance=ExtResource("1_clrvb")]
layout_mode = 2
text = "Treat!!!"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
